@@ -1,7 +1,7 @@
 /*
  * Knowage, Open Source Business Intelligence suite
  * Copyright (C) 2016 Engineering Ingegneria Informatica S.p.A.
- * 
+ *
  * Knowage is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
@@ -11,11 +11,18 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Affero General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 package it.eng.spagobi.engines.officedocument;
+
+import java.util.Base64;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import org.apache.log4j.Logger;
 
 import it.eng.spago.base.SessionContainer;
 import it.eng.spago.base.SourceBean;
@@ -27,27 +34,18 @@ import it.eng.spagobi.services.content.service.ContentServiceImplSupplier;
 import it.eng.spagobi.services.security.exceptions.SecurityException;
 import it.eng.spagobi.utilities.mime.MimeUtils;
 
-import java.io.ByteArrayOutputStream;
-import java.io.OutputStreamWriter;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import org.apache.log4j.Logger;
-
-import sun.misc.BASE64Decoder;
-
 public class GetOfficeContentAction extends AbstractHttpAction {
 
     private static transient Logger logger=Logger.getLogger(GetOfficeContentAction.class);
-    
+
 	/* (non-Javadoc)
 	 * @see it.eng.spago.dispatching.service.ServiceIFace#service(it.eng.spago.base.SourceBean, it.eng.spago.base.SourceBean)
 	 */
+	@Override
 	public void service(SourceBean request, SourceBean responseSb) throws Exception {
 	    logger.debug("IN");
 	    freezeHttpResponse();
-	    
+
 		HttpServletResponse response = getHttpResponse();
 		HttpServletRequest req = getHttpRequest();
 		AuditManager auditManager = AuditManager.getInstance();
@@ -60,57 +58,57 @@ public class GetOfficeContentAction extends AbstractHttpAction {
 		    logger.debug("Audit id = [" + auditIdStr + "]");
 		    auditId = new Integer(auditIdStr);
 		}
-		
+
 		try {
-		
+
 			if (auditId != null) {
 			    auditManager.updateAudit(auditId, new Long(System.currentTimeMillis()), null, "EXECUTION_STARTED", null,
 				    null);
 			}
-			
+
 			SessionContainer sessionContainer = this.getRequestContainer().getSessionContainer();
 			SessionContainer permanentContainer = sessionContainer.getPermanentContainer();
 			IEngUserProfile profile = (IEngUserProfile) permanentContainer.getAttribute(IEngUserProfile.ENG_USER_PROFILE);
 			if (profile == null) {
 				throw new SecurityException("User profile not found in session");
 			}
-			
+
 			String documentId = (String)request.getAttribute("documentId");
-			if (documentId == null) 
+			if (documentId == null)
 				throw new Exception("Document id missing!!");
 			logger.debug("Got parameter documentId = " + documentId);
-			
+
 			ContentServiceImplSupplier c = new ContentServiceImplSupplier();
 			Content template = c.readTemplate(profile.getUserUniqueIdentifier().toString(), documentId, null);
 			String templateFileName = template.getFileName();
-	
+
 			logger.debug("Template Read");
-	
+
 			if(templateFileName==null){
 				logger.warn("Template has no name");
 				templateFileName="";
 			}
-			
+
 			response.setHeader("Cache-Control", ""); // leave blank to avoid IE errors
-			response.setHeader("Pragma", ""); // leave blank to avoid IE errors 
-			response.setHeader("content-disposition","inline; filename="+templateFileName);	
-			
+			response.setHeader("Pragma", ""); // leave blank to avoid IE errors
+			response.setHeader("content-disposition","inline; filename="+templateFileName);
+
 			String mimeType = MimeUtils.getMimeType(templateFileName);
 			logger.debug("Mime type is = " + mimeType);
 			response.setContentType(mimeType);
 
-			BASE64Decoder bASE64Decoder = new BASE64Decoder();
-			byte[] templateContent = bASE64Decoder.decodeBuffer(template.getContent());
-			
+			Base64.Decoder bASE64Decoder = Base64.getDecoder();
+			byte[] templateContent = bASE64Decoder.decode(template.getContent());
+
 			response.getOutputStream().write(templateContent);
 			response.setContentLength(templateContent.length);
-			response.getOutputStream().flush();	
+			response.getOutputStream().flush();
 			response.getOutputStream().close();
-			
+
 		    // AUDIT UPDATE
 		    auditManager.updateAudit(auditId, null, new Long(System.currentTimeMillis()), "EXECUTION_PERFORMED", null,
 			    null);
-		
+
 		} catch (Exception e) {
 		    logger.error("Exception", e);
 		    // AUDIT UPDATE
