@@ -17,6 +17,7 @@
  */
 package it.eng.spagobi.services.content.service;
 
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -49,7 +50,6 @@ import it.eng.spagobi.engines.drivers.kpi.KpiDriver;
 import it.eng.spagobi.services.content.bo.Content;
 import it.eng.spagobi.services.security.exceptions.SecurityException;
 import it.eng.spagobi.utilities.engines.EngineStartServletIOManager;
-import sun.misc.BASE64Encoder;
 
 public class ContentServiceImplSupplier {
 	static private Logger logger = Logger.getLogger(ContentServiceImplSupplier.class);
@@ -143,9 +143,9 @@ public class ContentServiceImplSupplier {
 				}
 			}
 
-			BASE64Encoder bASE64Encoder = new BASE64Encoder();
+			Base64.Encoder bASE64Encoder = Base64.getEncoder();
 			if (template != null) {
-				content.setContent(bASE64Encoder.encode(template));
+				content.setContent(bASE64Encoder.encodeToString(template));
 			} else {
 				content.setContent("");
 			}
@@ -232,8 +232,8 @@ public class ContentServiceImplSupplier {
 				}
 			}
 
-			BASE64Encoder bASE64Encoder = new BASE64Encoder();
-			content.setContent(bASE64Encoder.encode(template));
+			Base64.Encoder bASE64Encoder = Base64.getEncoder();
+			content.setContent(bASE64Encoder.encodeToString(template));
 			logger.debug("template read");
 			content.setFileName(temp.getName());
 		} catch (NumberFormatException e) {
